<?xml version="1.0"?>
<package>
  <name>ropod_teleop</name>
  <version>1.2.0</version>
  <description>A package for controlling the ROPOD platform using a joypad</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>ropod_ros_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>ropod_ros_msgs</run_depend>

  <export></export>
</package>
